Fix code snippet overflow

--- a/website/components/CodeHighlight.module.css
+++ b/website/components/CodeHighlight.module.css
@@ -11,5 +11,6 @@
   margin: 0;
   font-family: 'Fira Code', monospace;
   line-height: var(--line-height-md);
+  overflow: auto;
 }
 
